2006-11-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile: use $(DOWNLOAD_URL)

	* site/devel/menu-entries.py: remove packaging menu.

	* GNUmakefile (menuify): add download version db command.
	(menuify): set download url.
	(update-versions): update-versions target

	* scripts/lilypondorg.py: remove file.
	
	* scripts/versiondb.py: new file from gub.
	
	* scripts/format-page.py (branches): add 2.10.
	(read_build_versions): use version_db
	(main): junk offline option, add --db-file

	* site/install/index.html: use new files.

	* site/install/install-2.9.ihtml: new file, from devel.ihtml

	* site/install/install-2.10.ihtml: new file.

	* site/devel/index.html: idem.
	Use repo.or.cz until sv.gnu comes online.
	
	* site/devel/participating/index.html: git instructions.

2006-11-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): typos, move chunks to old news.

2006-11-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): .29

2006-11-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: use &mdash
	don't use <pre> 

	* site/news.ihtml (href): 2.9.28

2006-11-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: suggestions by Cameron Horsburgh.

	* site/index.html: remove typo.

2006-10-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: update
	tweaks.

2006-10-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.27

2006-10-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): close parenthesis.
	(Preferably): typo.

2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): typo.

2006-10-22  John Mandereau  <john.mandereau@free.fr>

	* fr/about/pubs.html: update translation (add erik's thesis).

2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.26
	(href): announce thesis availability.

2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>
