@@ -13,18 +13,17 @@
 
   <li>
     Documentation pour
-    <a href="@DOC@v2.8/Documentation/">
+    <a href="@DOC@v2.10/Documentation/">
       <b><font size="+1">
-	  LilyPond 2.8</font></b>
+	  LilyPond 2.10</font></b>
     </a>
     (derni&egrave;re version stable)
   </li>
   <li>
     Documentation pour
-    <a href="@DOC@v2.9/Documentation/">
-      <b>LilyPond 2.9</b>
+    <a href="@DOC@v2.8/Documentation/">
+      <b>LilyPond 2.8</b>
     </a>
-    (version de d&eacute;veloppement)
   </li>
 
   <li>
