@@ -108,7 +108,7 @@
 	
 	<tr>
 	  <td>Stable</td>
-	  <td>@v2.8-source-VERSION@</td>
+	  <td>@v2.10-source-VERSION@</td>
 	  <td>
 	    <a href="../doc/v2.8/Documentation/">Documentation</a>,
 	    <a href="install/#2.8">t&eacute;l&eacute;chargement</a>.
@@ -125,8 +125,8 @@
         </tr>
 
 	<tr>
-	  <td>Old</td>
-	  <td>@v2.6-source-VERSION@</td>
+	  <td>Ancienne</td>
+	  <td>@v2.8-source-VERSION@</td>
 	  <td>
 	    <a href="../doc/v2.6/Documentation/">Documentation</a>,
 	    <a href="install/#2.6">t&eacute;l&eacute;chargement</a>.
