@@ -17,7 +17,26 @@
 </p>
 
 
-<h2>T&eacute;l&eacute;charger LilyPond 2.8 -- version stable</h2>
+<h2>T&eacute;l&eacute;charger LilyPond 2.10 &mdash; branche stable</h2>
+
+<a name="2.10"></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
+  
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th></th>
+    <th>Plate-forme</th>
+    <th>Version</th>
+    <th>Aller ici</th>
+    <th>Version de LilyPond</th>
+    <th>Compil&eacute; et empaquet&eacute; par</th>
+  </tr>
+
+  @install-2.10.ihtml@
+
+</table>
+
+<h2>T&eacute;l&eacute;charger LilyPond 2.8 &mdash; ancienne branche</h2>
 
 <a name="2.8"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
@@ -32,27 +51,7 @@
     <th>Compil&eacute; et empaquet&eacute; par</th>
   </tr>
 
-  @stable.ihtml@
-
-</table>
-
-<h2>T&eacute;l&eacute;charger LilyPond 2.9 -- version de
-d&eacute;veloppement</h2>
-
-<a name="2.9"></a>
-<table width="100%" border="0" rules="rows" cellpadding="3">
-  
-  <!-- use this as template for new entry !-->
-  <tr>
-    <th></th>
-    <th>Plate-forme</th>
-    <th>Version</th>
-    <th>Aller ici</th>
-    <th>Version de LilyPond</th>
-    <th>Compil&eacute; et empaquet&eacute; par</th>
-  </tr>
-
-  @devel.ihtml@
+  @install-2.8.ihtml@
 
 </table>
 
