@@ -1,3 +1,8 @@
+2006-11-12  John Mandereau  <john.mandereau@free.fr>
+
+	* fr/documentation.html, fr/install/index.html, fr/index.html:
+	update translation.
+
 2006-11-09  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* GNUmakefile: use $(DOWNLOAD_URL)
